# public-browser

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  prompt.md
_bmad-output/implementation-artifacts/: 10-5-prd-addendum.md  11-4-rename-public-browser.md  12-2-meta-estimated-tokens.md  5b-1-retina-fix-screenshot-optimierung.md  (+4 more)
cards/: README.md  article-reader.yaml  login-form.yaml  search-result-list.yaml
docs/: bug-015-screenshot-occlusion.md  deferred-work.md  friction-fixes.md  friction-report-2026-04-06.md  pattern-updates.md
python/: README.md  pyproject.toml  silbercuechrome.py
python/silbercuechrome/: __init__.py  chrome.py  client.py  page.py
python/tests/: test_chrome_v2.py  test_client.py  test_coexistence.py  test_distribution.py  test_e2e_coexistence.py  test_page_v2.py  test_response_parsing.py  test_shared_core.py
scripts/: check-gate.test.ts  check-gate.ts  dev-mode.sh  publish.test.ts  publish.ts  visual-feedback.test.ts
src/: index.ts  pro-feature-gates.regression.test.ts  registry.test.ts  registry.ts  server.ts  types.ts  version.ts
test-hardest/: BENCHMARK-PROTOCOL.md  TESTS.md  benchmark-browser_use-llm.json  benchmark-browser_use_skill-llm.json  benchmark-claude_in_chrome-llm.json  benchmark-playwright_mcp-1775155348932.json  benchmark-playwright_mcp-1775155432528.json  benchmark-playwright_mcp-llm.json  benchmark-silbercue-epic8.json  benchmark-silbercuechrome_mcp-1775259972919.json  benchmark-silbercuechrome_mcp-llm-v0.3.1.json  benchmark-silbercuechrome_mcp-llm.json  epic5b-test.mjs  full-benchmark.mjs  index.html  ops-benchmark.html  ops-playwright_mcp-1775155830718.json  package-lock.json  package.json  run-benchmark.js  run-claude-in-chrome.js  run-mcp-benchmark.mjs  run-ops-benchmark.js  smoke-test.mjs  tab-target.html
test-stress/: 01-shadow-dom.html  02-virtual-scroll.html  03-spa-dynamic.html  04-nested-iframes.html  05-canvas-interactive.html  06-drag-drop.html  07-overlay-hell.html  08-mega-dom.html  09-keyboard-focus.html  10-race-conditions.html  11-css-tricks.html  12-form-gauntlet.html  13-responsive-viewport.html  index.html  run-stress.mjs  stress-test.mjs
(+134 files in other folders)
